--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,6 +2,8 @@ name: tweet capiron # name can be anything
 
 on:
   workflow_dispatch:
+  # schedule: # disable cron for github actions as they are slow. https://cron-job.org does a much better job
+  #   - cron: '0 * * * *' # runs every hour at 00 minutes
 
 jobs:
   build:
@@ -28,6 +30,7 @@ jobs:
           ACCESS_TOKEN: ${{ secrets.ACCESS_TOKEN }}
           ACCESS_TOKEN_SECRET: ${{ secrets.ACCESS_TOKEN_SECRET }}
         run: python main.py
+        
 - name: commit files
         run: |
           git config --local user.email "189195890+capironi@users.noreply.github.com"
