--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -1,29 +1,34 @@
-name: tweet capiron # name can be anything
+name: Tweet Capiron
 
 on:
   workflow_dispatch:
-  # schedule: # disable cron for github actions as they are slow. https://cron-job.org does a much better job
-  #   - cron: '0 * * * *' # runs every hour at 00 minutes
+  # Uncomment and modify this if you want to schedule it
+  # schedule:
+  #   - cron: '0 * * * *'  # Uncomment to run every hour at 00 minutes
 
 jobs:
   build:
     runs-on: ubuntu-latest
+
     steps:
+      # Step 1: Checkout code
+      - name: Checkout repository content
+        uses: actions/checkout@v3  # Ensure you're using the latest version of the checkout action
 
-      - name: checkout repo content
-        uses: actions/checkout@v3 # checkout the repository content to github runner
-
-      - name: setup python
+      # Step 2: Set up Python environment
+      - name: Set up Python 3.10
         uses: actions/setup-python@v4
         with:
-          python-version: '3.13.0' # or any other python version
-          
-      - name: install python packages
+          python-version: '3.10'  # Use a stable Python version for better compatibility
+
+      # Step 3: Install Python dependencies
+      - name: Install Python packages
         run: |
           python -m pip install --upgrade pip
-          pip install -r requirements.txt
-          
-      - name: execute py script # run main.py
+          pip install -r requirements.txt  # Make sure requirements.txt is in the repo
+
+      # Step 4: Execute Python script
+      - name: Execute Python script (main.py)
         env:
           CONSUMER_KEY: ${{ secrets.CONSUMER_KEY }}
           CONSUMER_SECRET: ${{ secrets.CONSUMER_SECRET }}
